Fix gap row

--- a/_src/scss/blocks/_two-block.scss
+++ b/_src/scss/blocks/_two-block.scss
@@ -195,7 +195,7 @@
 
   &--cards {
     @include breakpoint(w-sm){
-      grid-row-gap0rem;
+      grid-row-gap:0rem;
 
     }
   }
